<resources>
    <string name="app_name">Phone DB</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="manufacturer_tv">Manufacturer</string>
    <string name="data_clear">Clear all data</string>
    <string name="model_tv">Model</string>
    <string name="android_tv">Android version</string>
    <string name="website_tv">Website</string>
    <string name="website_bt">Website</string>
    <string name="cancel_bt">Cancel</string>
    <string name="save_bt">Save</string>
</resources>