<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="2">
    <TableRow
        android:id="@+id/producent_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manufacturer_tv"
            android:text="@string/manufacturer_tv">
        </TextView>
        <EditText android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/manufacturer_et">
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/model_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/model_tv"
            android:text="@string/model_tv">
        </TextView>
        <EditText android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/model_et">
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/android_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/android_tv"
            android:text="@string/android_tv">
        </TextView>
        <EditText android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/android_et">
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/website_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/website_tv"
            android:text="@string/website_tv">
        </TextView>
        <EditText android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/website_et">
        </EditText>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/website_bt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/website_bt"/>
        <Button
            android:id="@+id/cancel_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_bt"/>
        <Button
            android:id="@+id/save_bt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/save_bt"/>
    </TableRow>
</TableLayout>